// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complete() should do. 1`] = `
Array [
  Object {
    "payload": "restReasons",
    "type": "TIMESHEET-PC/ENTITIES/DAILY_REST_TIME_REASONS/SET",
  },
]
`;

exports[`error() should do 1`] = `
Array [
  Object {
    "type": "TIMESHEET-PC/ENTITIES/DAILY_REST_TIME_REASONS/CLEAR",
  },
  Object {
    "payload": Object {
      "errorCode": undefined,
      "isContinuable": true,
      "isFunctionCantUseError": false,
      "message": "APIエラー - undefined",
      "problem": undefined,
      "stackTrace": "",
      "type": "APIエラー",
    },
    "type": "CATCH_API_ERROR",
  },
]
`;

exports[`error() should do if Error is Array 1`] = `
Array [
  Object {
    "type": "TIMESHEET-PC/ENTITIES/DAILY_REST_TIME_REASONS/CLEAR",
  },
  Object {
    "payload": Object {
      "errorCode": undefined,
      "isContinuable": true,
      "isFunctionCantUseError": false,
      "message": "APIエラー - Error Test",
      "problem": "Error Test",
      "stackTrace": "",
      "type": "APIエラー",
    },
    "type": "CATCH_API_ERROR",
  },
]
`;

exports[`finally() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`start() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
]
`;
